<resources>
    <string name="app_name">Download Videos Gif</string>
    <string name="tweet_url">Tweet Url</string>
    <string name="download_video">Download Video/Gif</string>
    <string name="filename_optional">Filename (Optional)</string>
    <string name="tap_like">Show us some likes by tapping the \'LIKE\' Button.</string>
    <string name="hope_like">Hope you like it.</string>
    <string name="thank_you">Thank you for using App</string>
    <string name="about_twittersave">About ِApp</string>
    <string name="about">This App helps you to download Videos and animated Gifs from Tweets to your device.</string>
    <string name="_1_copy_the_tweet_url">Copy the tweet url of the tweet containing the video or animated gif. Then paste it into the tweet url box. Enter the name you want it stored with (optional). Then tap the \'Download\' button. Enjoy!!!</string>
    <string name="select_share">Select the option "Share a Tweet via ..." from a Tweet option (selected). Then select the app from the list of apps (the tweet link is automatically inserted in the link link box). Enter the name you want to store with (optional). Then press the "Download" button. Enjoy!!!</string>
    <string name="emmanuel_kehinde">ISSA</string>
    <string name="enable_disable_autolisten">Enable/Disable AutoListen</string>
    <string name="enable_autolisten">Enable the automatic button using the switch below the download button. Then use the Twitter app, select the option "Copy the Tweet \" link from a tweet containing the video or gif. The app automatically handles downloading of video or animated GIF.</string>
    <string name="general_channel">General Channel</string>
    <string name="containt_tweet">The tweet contains no video or gif file</string>
    <string name="tch">fetching Tweet</string>
    <string name="not_tweet">Not a tweet url</string>
    <string name="media_file">The tweet contains no media file</string>
    <string name="requset_failed">Request Failed: Check your internet connection</string>
    <string name="completed">Download Completed</string>
    <string name="check_notification">Download Started: Check Notification</string>
    <string name="kindly">Kindly grant the storage permission for App and try again</string>
    <string name="chek_connection">Request Failed: Check your internet connection</string>
    <string name="fetch_video">Fetching video...</string>
    <string name="fetch_gif">Fetching gif...</string>
    <string name="share">share app</string>
    <string name="problem">Report a problem</string>
    <string name="subject">Share app with your friends :</string>
    <string name="url_entered">The url entered contains no video or gif file</string>
    <string name="url_entered_media">The url entered contains no media file</string>
    <string name="enetrcorrent">Enter a correct tweet url</string>
    <string name="copy_tweet">Copy tweet URL to start downloading video or gif</string>
    <string name="App_autolisten">App AutoListen Running...</string>
    <string name="autolist_enabl">App AutoListen Enabled</string>
    <string name="autolist_Disabled">App AutoListen Disabled</string>

    // ads
    <string name="admob_app_id">ca-app-pub-4928950783655706~1546569165</string>
    <string name="banner_ad">ca-app-pub-4928950783655706/9141261804</string>
    <string name="Interstitial">ca-app-pub-4928950783655706/2715454258</string>
    <string name="developed_by">Developed by:</string>
    <string name="method_3">Method 3:</string>
    <string name="method_2">Method 2:</string>
    <string name="method_1">Method 1:</string>
    <string name="how_to_use">How to use?</string>
    <string name="what_it_does">What it does?</string>
    <string name="banner_ad2">ca-app-pub-4928950783655706/2967462049</string>
    <string name="about1">About</string>
</resources>
