<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AboutActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What it does?"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#111"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#444"
            android:lineSpacingExtra="6dp"
            android:layout_marginTop="8dp"
            android:text="@string/about"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="How to use?"
            android:textSize="16sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_marginTop="20dp"
            android:textColor="#111"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#222"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="6dp"
            android:text="Method 1: "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#444"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/_1_copy_the_tweet_url"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#222"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="6dp"
            android:text="Method 2: "/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#444"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/enable_autolisten"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#222"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="6dp"
            android:text="Method 3: "/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#444"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/select_share"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Developed by:"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#111"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingTop="16dp"
            android:id="@+id/txt_link"
            android:paddingBottom="16dp"
            android:textColor="@color/colorPrimary"
            android:lineSpacingExtra="6dp"
            android:text="@string/emmanuel_kehinde"/>
    </LinearLayout>


</ScrollView>